Change API endpoint to kawalcorona.com

--- a/popup.html
+++ b/popup.html
@@ -47,9 +47,9 @@
     </div>
 
     <div class="credits">
-      Informasi Lengkap di
-      <a href="https://kawalcovid19.id" target="_blank"
-        >http://kawalcovid19.id/</a
+      API supported by
+      <a href="https://kawalcorona.com" target="_blank"
+        >http://kawalcorona.com/</a
       >
       <br />
       Developed by: <a href="https://kopi.dev" target="_blank">Kopi.dev</a>
